# MadonnaWeb

./: .gitignore  HTTP Request.jmx  asgi.py  db.sqlite3  flake.nix  hello.txt  pyproject.toml  pyvenv.cfg  requirements.txt  rewuirement.txt  settings.py  shell.nix  urls.py  wsgi.py
.direnv/: nix-profile-.1008.0938d73bb14  nix-profile-.1008.0938d73bb14.rc
.github/workflows/: codeql.yml
Home/: forms.py  models.py  urls.py  views.py
Home/migrations/: 0001_initial.py  0002_remove_blog_blog_author_remove_blog_id_blog_blog_id.py  0002_test.py  0003_delete_test.py
Home/templates/: about.php  blog.php  edit_blog.php  facilities.php  facility_detail.html  gallery.php  gallery_detail.php  game.html  index.php  master.php  master2.php  new_Blog.php  reservation.php  reservations_form.php  reserve_edit.php  test.php
MadonnaWeb/: celery.py  settings.py  urls.py
Reports/: models.py  reports.html  reports.ipynb  tasks.py  urls.py  views.py
Reports/migrations/: 0001_initial.py
Reports/scripts/: reports.py
Reports/templates/: months_history.html  reports.html  reports.php
Reservation/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
Reservation/migrations/: 0018_remove_reservations_discounted_alter_prices_daytime_and_more.py  0019_remove_reservations_discounted.py
Reservation/reservation_function/: availability.py
Scripts/: activate  activate.bat
accounts/: models.py  views.py
blog/: forms.py  models.py  urls.py  views.py
blog/templates/: blog.php  (+6 more)
test/: forms.py  models.py  urls.py  views.py
users/: decorators.py  forms.py  urls.py  views.py
(+97 files in other folders)
